# tiny_timeout_process

./: CMakeLists.txt  main.c  readme.md
inc/: timeout.h
src/: timeout.c
